src/objects/ACETEZCommConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to store EZComm parameters</description>
    <fields>
        <fullName>ContextId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ContextId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IdType</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ProductType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecipientType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RecipientType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>ACETEZCommConfig</label>
</CustomObject>